ci: validate feature/* branch on push and create PR to develop if missing

--- a/.github/workflows/feature_validate.yaml
+++ b/.github/workflows/feature_validate.yaml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Setup GitHub CLI
         run: |
           sudo apt update
@@ -21,7 +24,7 @@ jobs:
           echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
           echo "ACTOR=${{ github.actor }}" >> $GITHUB_ENV
 
-      - name: Validate and handle pull request
+      - name: Validate branch and create PR if needed
         run: |
           echo "🔍 Branch: $BRANCH_NAME"
           echo "🔍 User: $ACTOR"
@@ -32,22 +35,22 @@ jobs:
           fi
 
           if [[ "$BRANCH_NAME" =~ ^feature/ ]]; then
-            echo "✅ Branch is valid"
+            echo "✅ Branch name is valid"
 
             # Verifica se já existe PR aberto para essa branch
             PR_EXISTS=$(gh pr list --head "$BRANCH_NAME" --base develop --state open --json number --jq '.[0]')
             if [[ -n "$PR_EXISTS" ]]; then
-              echo "ℹ️ PR já existe (#$PR_EXISTS), ele será atualizado automaticamente com este push."
+              echo "ℹ️ PR já existe (#$PR_EXISTS), será atualizado automaticamente com o push."
               exit 0
             fi
 
-            # Criar PR novo
+            # Cria PR novo para develop
             echo "🚀 Criando novo PR para develop"
             gh pr create \
               --base develop \
               --head "$BRANCH_NAME" \
               --title "Auto PR: Merge $BRANCH_NAME into develop" \
-              --body "Este PR foi aberto automaticamente após um push na branch $BRANCH_NAME." \
+              --body "Este PR foi criado automaticamente após um push na branch $BRANCH_NAME." \
               --label "auto-pr"
             exit 0
           else
