--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,12 +1,12 @@
-FROM python:3.11-slim
+FROM python:3.12-slim
 
 WORKDIR /backend
 
 COPY requirements.txt .
 
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . .
+# Remove todo cache do pip e instala dependências limpas
+RUN pip cache purge \
+    && pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
