fix(ci): handle existing label creation error and fix label name typo in workflow
    Added --force flag to label creation command to avoid errors if label already exists

    Corrected label name from auto-pullrequet to auto-pullrequest to prevent typos

    Improved robustness of GitHub Actions workflow for automated label management

--- a/.github/workflows/feature_validate.yaml
+++ b/.github/workflows/feature_validate.yaml
@@ -47,7 +47,7 @@ jobs:
             # Garante que a label auto-pullrequet existe
             if ! gh label view auto-pullrequet >/dev/null 2>&1; then
               echo "⚙️ Label 'auto-pullrequet' não encontrada. Criando..."
-              gh label create auto-pullrequet --color F1C40F --description "Auto generated PRs"
+              gh label create auto-pullrequet --color F1C40F --description "Auto generated PRs" --force
             else
               echo "✅ Label 'auto-pullrequet' já existe."
             fi
