--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -24,7 +24,13 @@ jobs:
         run: terraform -chdir=infra plan
 
       - name: 🧹 Remove existing Docker network if exists
-        run: docker network rm tuttino_net || true        
+        run: docker network rm tuttino_net || true
+
+      - name: 🧹 Cleanup existing containers
+        run: |
+          docker rm -f tuttino-postgres || true
+          docker rm -f tuttino-backend || true
+          docker rm -f tuttino-nginx || true
 
       - name: 🚀 Terraform Apply
         run: terraform -chdir=infra apply -auto-approve
