--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,17 +1,34 @@
-FROM python:3.12-slim
+# Etapa base
+FROM python:3.12-slim AS base
 
-RUN addgroup --system appgroup && adduser --system --ingroup appgroup appuser
+# Variáveis de ambiente
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
 
+# Instala dependências do sistema
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
+# Cria diretório de trabalho
 WORKDIR /backend
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copia apenas arquivos de dependência para cache
+COPY backend/pyproject.toml backend/poetry.lock* ./
 
-COPY . .
+# Instala Poetry
+RUN pip install poetry
 
-RUN chown -R appuser:appgroup /backend
-USER appuser
+# Instala dependências
+RUN poetry config virtualenvs.create false && \
+    poetry install --no-root --only main
 
+# Copia o restante da aplicação
+COPY backend/ .
+
+# Expõe a porta
 EXPOSE 8000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Comando de inicialização (substituído via Terraform se necessário)
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
