ci: add GitHub Actions workflow to deploy on merged PRs to develop

--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -5,6 +5,10 @@ on:
     types: [closed]
     branches: [develop]
 
+permissions:
+  contents: read
+  pull-requests: read
+
 jobs:
   filter:
     runs-on: ubuntu-latest
