ci: add full deploy pipeline with container cleanup, network creation, terraform apply and docker build caching
- Cleans old containers and network before deploy
- Ensures Docker network exists
- Runs terraform init, plan and apply
- Builds backend Docker image with build cache for speed
- Only triggers on merged PRs into develop with changes in infra or backend

--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -6,6 +6,8 @@ on:
     branches: [develop]
 
 jobs:
+  # This job filters the changes in the PR to determine if backend or infra files were modified
+  # If either of these directories has changes, the Merge-Validation job will run
   filter:
     runs-on: ubuntu-latest
     permissions:
