ci: add full deploy pipeline with container cleanup, network creation, terraform apply and docker build caching
- Cleans old containers and network before deploy
- Ensures Docker network exists
- Runs terraform init, plan and apply
- Builds backend Docker image with build cache for speed
- Only triggers on merged PRs into develop with changes in infra or backend

--- a/.github/workflows/feature_validate.yaml
+++ b/.github/workflows/feature_validate.yaml
@@ -3,7 +3,8 @@ name: 1 - [Feature] Validate Branch Prefix and Create PR
 on:
   push:
     branches:
-      - '**'
+      - 'feature/**'
+      - 'hotfix/**'
 
 jobs:
   validate-and-create-pr:
