--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -6,8 +6,6 @@ on:
     branches: [develop]
 
 jobs:
-  # This job filters the changes in the PR to determine if backend or infra files were modified
-  # If either of these directories has changes, the Merge-Validation job will run
   filter:
     runs-on: ubuntu-latest
     permissions:
@@ -32,14 +30,85 @@ jobs:
             infra:
               - 'infra/**'
 
-  Merge-Validation:
+  diagnose-runner:
     needs: filter
+    if: >
+      github.event.pull_request.merged == true &&
+      (needs.filter.outputs.infra_changed == 'true' || needs.filter.outputs.backend_changed == 'true')
+    runs-on: self-hosted
+    name: Diagnose Self-Hosted Runner
+    steps:
+      - name: Print date/time
+        run: date
+
+      - name: Show runner user and permissions
+        run: |
+          whoami
+          id
+          groups
+          echo "HOME=$HOME"
+          echo "SHELL=$SHELL"
+          echo "PWD=$PWD"
+          ls -ld $PWD
+
+      - name: System Info
+        run: |
+          uname -a
+          lsb_release -a || cat /etc/os-release || echo "No OS info"
+          uptime
+          df -h
+          free -m
+
+      - name: Docker info
+        run: |
+          docker version
+          docker info
+          docker ps -a
+          docker images
+          docker network ls
+
+      - name: Network info
+        run: |
+          ip addr show
+          ip route show
+          cat /etc/resolv.conf
+          netstat -tulpen || ss -tulpen
+
+      - name: Check self-hosted runner logs and status (Linux systemd)
+        run: |
+          sudo systemctl status actions.runner.* || echo "No systemd service found"
+          sudo journalctl -u actions.runner.* --since "1 hour ago" --no-pager || echo "No logs available"
+
+      - name: Check resource usage
+        run: |
+          ps aux --sort=-%mem | head -n 10
+          ps aux --sort=-%cpu | head -n 10
+          free -h
+
+      - name: Test network connectivity
+        run: |
+          ping -c 3 8.8.8.8 || echo "Ping failed"
+          curl -sI http://localhost:8000 || echo "Curl to localhost failed"
+
+      - name: Environment variables
+        run: env | sort
+
+      - name: List directory and files with permissions
+        run: ls -la $PWD
+
+      - name: List docker-compose files (if any)
+        run: |
+          find $PWD -maxdepth 2 -name "docker-compose*.yml" -o -name "docker-compose*.yaml" || echo "No docker-compose files found"
+
+  merge-validation:
+    needs:
+      - filter
+      - diagnose-runner
     if: >
       github.event.pull_request.merged == true &&
       startsWith(github.event.pull_request.head.ref, 'feature/') &&
       (needs.filter.outputs.infra_changed == 'true' || needs.filter.outputs.backend_changed == 'true')
     runs-on: self-hosted
-
     steps:
       - name: 📥 Checkout source
         uses: actions/checkout@v4
