--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -25,7 +25,7 @@ RUN poetry config virtualenvs.create false && \
     poetry install --no-root --only main
 
 # Copia o restante da aplicação
-COPY backend/ .
+COPY /backend/ .
 
 # Expõe a porta
 EXPOSE 8000
