--- a/backend/dockerfile_back
+++ b/backend/dockerfile_back
@@ -1,7 +1,7 @@
 # Etapa base
-FROM python:3.12-slim AS base
+FROM python:3.12-slim
 
-# Variáveis de ambiente
+# Evita criação de arquivos .pyc e mantém log no console
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1
 
@@ -12,22 +12,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # Cria diretório de trabalho
-WORKDIR /backend
+WORKDIR /app
 
-# Copia apenas arquivos de dependência para cache
-COPY pyproject.toml poetry.lock* ./
-
-# Instala Poetry
-RUN pip install poetry
-
-RUN poetry config virtualenvs.create false && \
-    poetry install --no-root --only main
+# Copia e instala dependências do projeto
+COPY requirements.txt .
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
 # Copia o restante da aplicação
 COPY . .
 
-# Expõe a porta
+# Expõe a porta padrão da aplicação
 EXPOSE 8000
 
-# Comando de inicialização (substituído via Terraform se necessário)
+# Comando de inicialização
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "4"]
